# pptrend

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pptrend  pptrend.py  pyproject.toml
.github/workflows/: publish.yml
pptrend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: test_clean.py
